[DOC] RE-Update.

--- a/source/ChangeLog
+++ b/source/ChangeLog
@@ -1,32 +1,35 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
-* SNAPSHOT June 26, 2020
- * Upstream 2020-02-21.
+* SNAPSHOT June 27, 2020
+ * Upstream 2020-04-06.
  * [EMULATION] Now, emulation period is half of one frame.
                Because some devices (i.e. mouse) seems to need a short period.
                This may change to 1/4 of one frame (or not).
 	       See event.cpp and qt/common/emu_thread.cpp (& more).
  * [VM/EMU] Important: now EMU:: class inherits EMU_TEMPLATE:: .
- * [VM/FMTOWNS] Still works initially.
-                See source/src/vm/fmtowns/00_status.ja.md, 
-                STATUS section of doc/VMs/fmtowns.txt
-		and 000_gitlog.txt .
- * [VM/DEVICE][DEBUGGER] Add Call trace feature to I386_NP21.
-                         DEVICE::'s API HAS CHANGED.
  * [VM/EVENT][Qt] execute event->drive() (or event->run()) by half frame.
                   This is workaround for choppy mouse pointer/joystick.
+ * [VM/FMTOWNS] Still works initially.
+                See source/src/vm/fmtowns/00_status.ja.md,
+                STATUS section of doc/VMs/fmtowns.txt
+		and 000_gitlog.txt .
+ * [VM/FMTOWNS] CDROM: Implement CMD 00h (SEEK) correctness.
+                May Fractal engine works..
+ * [VM/DEVICE][DEBUGGER] Add Call trace feature to I386_NP21.
+                         DEVICE::'s API HAS CHANGED.
  * [VM/DEBUGGER] Add logging to "UCT" (Call trace) command.
- * [VM][CONFIG] Add variable memory size feature to some VMs.See eFMTOWNS. 
+ * [VM][CONFIG] Add variable memory size feature to some VMs.See eFMTOWNS.
  * [Qt/OpenGL4_5] Draw: Fix crash with external mapping (immutable storage).
                         Still not implement reading buffer.
  * [COMMON/FIFO] Add FIFO::fifo_size() and FIFO::left().Update SOVERSION.
- * [BUILD/CMake] Win32: Update toolchain for LLVM10.x and Ubuntu20.04 
-                 (Has uploaded to 
+ * [BUILD/CMake] Win32: Update toolchain for LLVM10.x and Ubuntu20.04
+                 (Has uploaded to
 		 https://hub.docker.com/repository/docker/artanejp/mingw-w64-llvm10-ubuntu20.04/general ).
+ * [BUILD/Linux] Debian Sid: Now, build with CLANG 10 and Qt5.14.
  * [VM/FMGEN][VM/YM2612][VM/FMTOWNS] Fix prescaler value, calculating for own OPN2.
  * [VM/I386_NP21] Merge Upstream 2020-04-06 's I386::/NP21.Belows are differ from upstream:
       - Make some memory access functions inline (these are bottoleneck of emulation).
-      - And some modifies are same as SNAPSHOT March 03, 2020. 
+      - And some modifies are same as SNAPSHOT March 03, 2020.
  * [VM/I386_NP21] Optimise for speed, make some functions __inline__ .
  * [VM/I386_NP21] Fix EDX value at resetting.
  * [VM/I386_NP21] Temporally enable FPU for i386.
@@ -34,17 +37,17 @@
  * [VM/I386_NP21] Log when made panic.
  * [VM/I386_NP21] Add undefined instruction "0F A6".
                   This may act as "int 6".Thanks to Soji Yamakawa-San.
- * [VM/I386_NP21] FPU: FISTTP INSNs (prefix DF) are only later than Pentium 4, 
+ * [VM/I386_NP21] FPU: FISTTP INSNs (prefix DF) are only later than Pentium 4,
                   not exists I386/486/Pentium.
  * [VM/I386_NP21] Disable FPU with I386, enable with I486SX.
  * [VM/I386_NP21] Change FPUemul to DOSBOX2 (temporally).
  * [VM/I386_NP21] Initialize CR0 to 0x00000000 (+some bits) for i386.
- * [VM/I386_NP21] *Perhaps* REPNE MOVS[B|W|D] don't dedicate Z flag, 
+ * [VM/I386_NP21] *Perhaps* REPNE MOVS[B|W|D] don't dedicate Z flag,
                   Thanks to Soji Yamakawa-San.
  * [VM/I386_NP21] Fix FTBFS with LLVM CLANG++.
  * [VM/I386_NP21] Add interrupt within rep prefix'ed ops.
  * [VM/UPD71071] Modify handling of 16bit transfer mode.
- * [VM/UPD71071] TOWNS_DMAC: Implement *truely* 16bit transfer feature 
+ * [VM/UPD71071] TOWNS_DMAC: Implement *truely* 16bit transfer feature
                              from Renesas(NEC Electronics)'s DATA SHEET.
  * [VM/UPD71071] TOWNS_DMAC: Ugly workaround for 16bit transfer DMAC command.
                              Will fix.
@@ -52,7 +55,7 @@
  * [VM/UPD71071] TOWNS_DMAC: Fix mandatory name with "mask" variable/arg.
  * [VM/UPD71071] Adjust status of on-demand-mode.
  * [VM/I8253] Add debugger feature, still reading only.
- * [VM/DEBUGGER] Add "RH" command to debugger and 
+ * [VM/DEBUGGER] Add "RH" command to debugger and
                  bool get_debug_regs_description(_TCHAR *, size_t) to API.
  * [VM/FMTOWNS] FONTROMS: Add API read_direct_data8() to reading faster by CRTC.
  * [VM/FM8] Fix warning from EVENT:: when resetting.
@@ -66,9 +69,9 @@
  * [UI/Qt][OSD] Add tooltip for virtual medias.
  * [UI/Qt] CDROM: Add "SWAP BYTE ORDER for AUDIO" config entry.
  * [OSD/Qt][LOGGER] Fix linkage error for LLD 10.x and Win32 cross.
- * Built with f5a2505cb38b92ae68df12f306ba03eeb5b836cd (or later).
+ * Built with d2322eb3793c06a3056ed10245d49c6a865a79d4 (or later).
 
--- Jun 26, 2020 19:41:26 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+-- Jun 27, 2020 01:51:03 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
 
 * SNAPSHOT March 03, 2020
  * Upstream 2020-02-21.
