--- a/source/history.txt
+++ b/source/history.txt
@@ -1,3 +1,16 @@
+12/19/2020
+
+[VM/SCSI_CDROM] fix pre-gap of first track when it is audio track
+
+
+12/18/2020
+
+[VM/SCSI_CDROM] improve routine to get start/end frame of CD-DA playing
+
+[PC8801/PC88] support 8inch DMA-type floppy drives for PC-8001mkII/SR
+[PC9801/DISPLAY] improve EGC (thanks Mr.Ryuji Okamoto)
+
+
 12/16/2020
 
 [PC8801/DISKIO] improve to read/write files in initial current directory
