[VM][BX1][MC6843][DISK] Merge Upstream 2021-02-07 excepts OSD::open_console().

--- a/source/history.txt
+++ b/source/history.txt
@@ -1,3 +1,17 @@
+2/7/2021
+
+[WINMAIN] improve WM_KEYDOW/WM_KEYUP events for VK_PROCESSKEY case
+[WIN32/CONSLE] improve routine to change console size
+
+[VM/DISK] fix density flag when loading solid image with fm sectors
+[VM/MC6843] fix track zero flag in STRA
+[VM/MC6843] fix seek error flag in STRB
+[VM/MC6843] fix seek command
+
+[BX1/DISPLAY] improve for drawing digitron display
+[BX1/KEYBOARD] improve I/O ports for detecting key pressed/released
+[BX1/PRINTER] add ugly patch for printer process
+
 1/24/2021
 
 [VM/I8279] support 8279 (based on MAME)
@@ -460,7 +474,7 @@
 12/1/2018
 
 [PC8801] enable/disable drawing scan line when monitor type is hireso/standard
-[PC8801/PC88] improve text attributes/rederer (thanks ePC-8801MA‰ü)
+[PC8801/PC88] improve text attributes/rederer (thanks ePC-8801MAæ”¹)
 [PC8801/PC88] fix analog back color
 [PC8801/PC88] improve routine to change palette for each scan line
 
@@ -618,7 +632,7 @@
 [VM/MB8877] improve for debugger
 [VM/TMS9918] improve for debugger
 [VM/UPD765A] improve for debugger
-[VM/UPD765A] fix read/write commands to check density (thanks PC8801MA‰ü)
+[VM/UPD765A] fix read/write commands to check density (thanks PC8801MAæ”¹)
 [VM/UPD765A] fix read diagnostics status for unformat/density mismatch case
 
 [PC8801/PC88] fix underline/upperline attributes
@@ -713,7 +727,7 @@
 12/14/2017
 
 [RESOURCE] change accelerators for switching full speed and roman/kana input
-[WINMAIN] fix to call ImmAssociateContext() in WM_ACTIVATE (thanks PC8801MA‰ü)
+[WINMAIN] fix to call ImmAssociateContext() in WM_ACTIVATE (thanks PC8801MAæ”¹)
 
 [VM/HD46505] fix to force update event timing when R0-R9 are modified
 [VM/HUC6280] support to show clocks since starting scanline in debugger
@@ -785,21 +799,21 @@
 [EMU/DEBUGGER] support ut command (unassemble cpu trace)
 [EMU/DEBUGGER] fix < command to check if command file is correctly opened
 
-[EMU/OSD] fix initialize_screen_buffer() for RGB565 (thanks PC8801MA‰ü)
+[EMU/OSD] fix initialize_screen_buffer() for RGB565 (thanks PC8801MAæ”¹)
 [EMU/OSD] improve read_console_input() to get cursor key
 
 [VM/MCS48] support to show total cpu clocks in debugger
 [VM/MCS48] support cpu trace
 [VM/UPD7220] improve vsync/hsync timing
 [VM/UPD7220] improve status register to select vblank/hblank by sync command
-[VM/YM2151] improve not to load mamefm.dll again (thanks PC8801MA‰ü)
-[VM/YM2203] improve not to load mamefm.dll again (thanks PC8801MA‰ü)
+[VM/YM2151] improve not to load mamefm.dll again (thanks PC8801MAæ”¹)
+[VM/YM2203] improve not to load mamefm.dll again (thanks PC8801MAæ”¹)
 [VM/Z80] support to show total cpu clocks in debugger
 [VM/Z80] support cpu trace
 
-[PC8801MA] support OPN+OPN, OPNA+OPNA, and OPNA+OPN (thanks PC8801MA‰ü)
-[PC8801MA] fix back space key issue (thanks PC8801MA‰ü)
-[PC8801MA] fix bank switch of extrom (thanks PC8801MA‰ü)
+[PC8801MA] support OPN+OPN, OPNA+OPNA, and OPNA+OPN (thanks PC8801MAæ”¹)
+[PC8801MA] fix back space key issue (thanks PC8801MAæ”¹)
+[PC8801MA] fix bank switch of extrom (thanks PC8801MAæ”¹)
 [PC8801MA] fix not to apply digital palette in monochrome and digital mode
 [PC8801MA] fix to apply analog palette in monochrome and analog mode
 [PC8801MA] fix to apply reverse in text attribute to monochrome graphic
@@ -3963,7 +3977,7 @@ Fix typo (regist -> register, recieve -> receive)
 [VM/I8085] support 8080/8085 (based on MAME 8080/8085 core)
 [VM/I86] change class name from X86 to I86
 
-[MULTI8/KEYBOARD] fix the problem that cannot input the kana-character "¨"
+[MULTI8/KEYBOARD] fix the problem that cannot input the kana-character "ï½¨"
 [TK80] change cpu core from z80 to 8080
 [TK80/MEMORY] change user-defined rom address to $0c00-$7dff
 
